--- a/public/tf/index.html
+++ b/public/tf/index.html
@@ -56,6 +56,7 @@
 			model.fitDataset(xyDataset, {epochs: 100}).then((h) => {//, validationBatchSize: 6, batchSize: 6
 				// Use the model to do inference on a data point the model hasn't seen before:
 				// Open the browser devtools to see the output
+				//model.evaluate(x_test,  y_test, verbose=2)
 				predictions = model.predict(tf.tensor([0, 1, 0, 1, 0, 1],[1,6]));//.print(true);
 				predictions.print();
 				predictions.max().print();/**/
